- include bio- in the TooltipDirective

--- a/src/app/admin/admin-ban-user/admin-ban-user.component.html
+++ b/src/app/admin/admin-ban-user/admin-ban-user.component.html
@@ -22,7 +22,7 @@
         <bio-list-item
           [disabled]="user.disabled"
           *ngFor="let user of users; trackBy: trackById"
-          [tooltip]="user.tooltip"
+          [bioTooltip]="user.tooltip"
           [tooltipDisabled]="user.tooltipDisabled"
           (click)="action(user)"
         >
