--- a/src/app/admin/admin-errors/admin-errors.component.html
+++ b/src/app/admin/admin-errors/admin-errors.component.html
@@ -18,7 +18,7 @@
           icon
           type="button"
           (click)="copyQueryToClipboard(error.sqlQueryWithParameters)"
-          tooltip="Copy to clipboard (with parameters)"
+          bioTooltip="Copy to clipboard (with parameters)"
         >
           <bio-icon>assignment</bio-icon>
         </button>
