--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -29,7 +29,7 @@
       [icon]="isMobile"
       routerLink="/score/add"
       queryParamsHandling="preserve"
-      tooltip="Submit score"
+      bioTooltip="Submit score"
       tooltipPosition="bottom"
       small
       [tooltipDisabled]="!isMobile"
