--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -19,7 +19,7 @@
           [icon]="isMobile"
           routerLink="/score/add"
           queryParamsHandling="preserve"
-          tooltip="Submit score"
+          bioTooltip="Submit score"
           tooltipPosition="bottom"
           [tooltipDisabled]="!isMobile"
         >
