--- a/src/app/player/player-change-requests/player-change-requests-action-cell/player-change-requests-action-cell.component.html
+++ b/src/app/player/player-change-requests/player-change-requests-action-cell/player-change-requests-action-cell.component.html
@@ -2,7 +2,7 @@
   bioButton
   icon
   small
-  tooltip="Check requested changes"
+  bioTooltip="Check requested changes"
   tooltipPosition="right"
   type="button"
   [disabled]="loadingModal"
