--- a/src/app/score/score-shared/score-approval/score-approval-actions-modal/score-approval-actions-modal.component.html
+++ b/src/app/score/score-shared/score-approval/score-approval-actions-modal/score-approval-actions-modal.component.html
@@ -7,7 +7,7 @@
       bioButton
       icon
       large
-      tooltip="Approve"
+      bioTooltip="Approve"
       tooltipPosition="right"
       (click)="openModalApproval(scoreApprovalActionEnum.Approve)"
       [disabled]="loading"
@@ -21,7 +21,7 @@
       bioButton
       icon
       large
-      tooltip="Reject"
+      bioTooltip="Reject"
       tooltipPosition="right"
       (click)="openModalApproval(scoreApprovalActionEnum.Reject)"
       [disabled]="loading"
@@ -35,7 +35,7 @@
       bioButton
       icon
       large
-      tooltip="Request changes"
+      bioTooltip="Request changes"
       tooltipPosition="right"
       type="button"
       (click)="openModalRequestChanges()"
