--- a/src/app/score/score-world-record/score-world-records.component.html
+++ b/src/app/score/score-world-record/score-world-records.component.html
@@ -39,7 +39,7 @@
               </div>
               <div
                 *ngFor="let stage of scoreTopTable.stages; trackBy: trackById"
-                [tooltip]="stage.name"
+                [bioTooltip]="stage.name"
                 (click)="updateOrderByIdStage(stage.id)"
                 class="stage"
               >
