--- a/src/app/shared/components/table/table-cell/table-cell.component.html
+++ b/src/app/shared/components/table/table-cell/table-cell.component.html
@@ -8,7 +8,7 @@
   <ng-template #noTemplate>
     <span
       *ngLet="item[colDef.property] | tableCellFormatter: colDef.formatter as value"
-      [tooltip]="item | tableCellTooltip: colDef.tooltip:value"
+      [bioTooltip]="item | tableCellTooltip: colDef.tooltip:value"
       [tooltipPosition]="colDef.tooltipPosition"
       [tooltipDisabled]="!colDef.tooltip"
     >
