--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -30,9 +30,9 @@
       routerLink="/score/add"
       queryParamsHandling="preserve"
       bioTooltip="Submit score"
-      tooltipPosition="bottom"
+      bioTooltipPosition="bottom"
       small
-      [tooltipDisabled]="!isMobile"
+      [bioTooltipDisabled]="!isMobile"
     >
       <bio-icon small>add</bio-icon>
       <ng-container *ngIf="!isMobile">Submit score</ng-container>
