--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -20,8 +20,8 @@
           routerLink="/score/add"
           queryParamsHandling="preserve"
           bioTooltip="Submit score"
-          tooltipPosition="bottom"
-          [tooltipDisabled]="!isMobile"
+          bioTooltipPosition="bottom"
+          [bioTooltipDisabled]="!isMobile"
         >
           <bio-icon>add</bio-icon>
           <ng-container *ngIf="!isMobile">Submit score</ng-container>
