--- a/src/app/player/player-change-requests/player-change-requests-action-cell/player-change-requests-action-cell.component.html
+++ b/src/app/player/player-change-requests/player-change-requests-action-cell/player-change-requests-action-cell.component.html
@@ -3,7 +3,7 @@
   icon
   small
   bioTooltip="Check requested changes"
-  tooltipPosition="right"
+  bioTooltipPosition="right"
   type="button"
   [disabled]="loadingModal"
   (click)="openModalChangeRequests()"
