--- a/src/app/score/score-shared/score-approval/score-approval-actions-cell/score-approval-actions-cell.component.html
+++ b/src/app/score/score-shared/score-approval/score-approval-actions-cell/score-approval-actions-cell.component.html
@@ -3,7 +3,7 @@
   icon
   small
   bioTooltip="Approve"
-  tooltipPosition="right"
+  bioTooltipPosition="right"
   (click)="openModalApproval(scoreApprovalActionEnum.Approve)"
   [disabled]="loadingApprovalModal"
   type="button"
@@ -15,7 +15,7 @@
   icon
   small
   bioTooltip="Reject"
-  tooltipPosition="right"
+  bioTooltipPosition="right"
   (click)="openModalApproval(scoreApprovalActionEnum.Reject)"
   [disabled]="loadingApprovalModal"
   type="button"
@@ -27,7 +27,7 @@
   icon
   small
   bioTooltip="Request changes"
-  tooltipPosition="right"
+  bioTooltipPosition="right"
   type="button"
   (click)="openModalRequestChanges()"
   [disabled]="loadingRequestChangesModal"
