--- a/src/app/score/score-shared/score-approval/score-approval-actions-modal/score-approval-actions-modal.component.html
+++ b/src/app/score/score-shared/score-approval/score-approval-actions-modal/score-approval-actions-modal.component.html
@@ -8,7 +8,7 @@
       icon
       large
       bioTooltip="Approve"
-      tooltipPosition="right"
+      bioTooltipPosition="right"
       (click)="openModalApproval(scoreApprovalActionEnum.Approve)"
       [disabled]="loading"
       type="button"
@@ -22,7 +22,7 @@
       icon
       large
       bioTooltip="Reject"
-      tooltipPosition="right"
+      bioTooltipPosition="right"
       (click)="openModalApproval(scoreApprovalActionEnum.Reject)"
       [disabled]="loading"
       type="button"
@@ -36,7 +36,7 @@
       icon
       large
       bioTooltip="Request changes"
-      tooltipPosition="right"
+      bioTooltipPosition="right"
       type="button"
       (click)="openModalRequestChanges()"
       [disabled]="loading"
