--- a/src/app/score/score-shared/score-info/score-info.component.html
+++ b/src/app/score/score-shared/score-info/score-info.component.html
@@ -16,13 +16,13 @@
       [mdi]="mdiTrophy"
       *ngIf="score.isWorldRecord"
       bioTooltip="World Record"
-      tooltipPosition="right"
+      bioTooltipPosition="right"
     ></bio-icon>
     <bio-icon
       [mdi]="mdiTrophyAward"
       *ngIf="score.isCombinationWorldRecord"
       bioTooltip="Combination World Record"
-      tooltipPosition="right"
+      bioTooltipPosition="right"
     ></bio-icon>
   </ng-container>
 </div>
@@ -50,7 +50,7 @@
       [mdi]="mdiAccountStar"
       *ngIf="showWorldRecord && player.isCharacterWorldRecord"
       bioTooltip="Character World Record"
-      tooltipPosition="right"
+      bioTooltipPosition="right"
     ></bio-icon>
   </div>
   <a bio-url-preview [url]="player.evidence"></a>
