- removed LocalState from ParamsComponent

--- a/src/app/shared/params/params.component.html
+++ b/src/app/shared/params/params.component.html
@@ -1,12 +1,9 @@
-<div [controlGroup]="form" *ngLet="state$ | async as state">
+<div [controlGroup]="form">
   <!-- <editor-fold desc="Platform"> -->
   <bio-form-field *ngIf="formsConfig.idPlatform.show" label="Platform">
     <bio-select controlName="idPlatform" placeholder="Platform" *ngLet="platforms$ | async as platforms">
       <bio-option disabled *ngIf="!platforms?.length">No data found</bio-option>
-      <bio-option
-        [value]="null"
-        *ngIf="(formsConfig.idPlatform.clearable ?? state.clearable) && !!(idPlatform$ | async)"
-      >
+      <bio-option [value]="null" *ngIf="(formsConfig.idPlatform.clearable ?? clearable) && !!(idPlatform$ | async)">
         Clear
       </bio-option>
       <bio-option
@@ -26,11 +23,11 @@
   </bio-form-field>
   <!-- </editor-fold> -->
   <!-- <editor-fold desc="Game"> -->
-  <bio-form-field [loading]="state.gameLoading" *ngIf="formsConfig.idGame.show" label="Game">
+  <bio-form-field [loading]="gameLoading" *ngIf="formsConfig.idGame.show" label="Game">
     <bio-select controlName="idGame" placeholder="Game" *ngLet="games$ | async as games">
-      <bio-option disabled *ngIf="!games?.length && !state.gameLoading">No data found</bio-option>
-      <bio-option disabled *ngIf="state.gameLoading"><bio-spinner [size]="0.1"></bio-spinner> Loading...</bio-option>
-      <bio-option [value]="null" *ngIf="(formsConfig.idGame.clearable ?? state.clearable) && !!(idGame$ | async)">
+      <bio-option disabled *ngIf="!games?.length && !gameLoading">No data found</bio-option>
+      <bio-option disabled *ngIf="gameLoading"><bio-spinner [size]="0.1"></bio-spinner> Loading...</bio-option>
+      <bio-option [value]="null" *ngIf="(formsConfig.idGame.clearable ?? clearable) && !!(idGame$ | async)">
         Clear
       </bio-option>
       <bio-option [value]="game.id" *ngFor="let game of games; trackBy: trackById" [title]="game.name">
@@ -45,16 +42,11 @@
   </bio-form-field>
   <!-- </editor-fold> -->
   <!-- <editor-fold desc="Mini game"> -->
-  <bio-form-field [loading]="state.miniGameLoading" *ngIf="formsConfig.idMiniGame.show" label="Mini game">
+  <bio-form-field [loading]="miniGameLoading" *ngIf="formsConfig.idMiniGame.show" label="Mini game">
     <bio-select controlName="idMiniGame" placeholder="Mini Game" *ngLet="miniGames$ | async as miniGames">
-      <bio-option disabled *ngIf="!miniGames?.length && !state.miniGameLoading">No data found</bio-option>
-      <bio-option disabled *ngIf="state.miniGameLoading"
-        ><bio-spinner [size]="0.1"></bio-spinner> Loading...</bio-option
-      >
-      <bio-option
-        [value]="null"
-        *ngIf="(formsConfig.idMiniGame.clearable ?? state.clearable) && !!(idMiniGame$ | async)"
-      >
+      <bio-option disabled *ngIf="!miniGames?.length && !miniGameLoading">No data found</bio-option>
+      <bio-option disabled *ngIf="miniGameLoading"><bio-spinner [size]="0.1"></bio-spinner> Loading...</bio-option>
+      <bio-option [value]="null" *ngIf="(formsConfig.idMiniGame.clearable ?? clearable) && !!(idMiniGame$ | async)">
         Clear
       </bio-option>
       <bio-option
@@ -73,11 +65,11 @@
   </bio-form-field>
   <!-- </editor-fold> -->
   <!-- <editor-fold desc="Mode"> -->
-  <bio-form-field [loading]="state.modeLoading" *ngIf="formsConfig.idMode.show" label="Mode">
+  <bio-form-field [loading]="modeLoading" *ngIf="formsConfig.idMode.show" label="Mode">
     <bio-select controlName="idMode" placeholder="Mode" *ngLet="modes$ | async as modes">
-      <bio-option disabled *ngIf="!modes?.length && !state.modeLoading">No data found</bio-option>
-      <bio-option disabled *ngIf="state.modeLoading"><bio-spinner [size]="0.1"></bio-spinner> Loading...</bio-option>
-      <bio-option [value]="null" *ngIf="(formsConfig.idMode.clearable ?? state.clearable) && !!(idMode$ | async)">
+      <bio-option disabled *ngIf="!modes?.length && !modeLoading">No data found</bio-option>
+      <bio-option disabled *ngIf="modeLoading"><bio-spinner [size]="0.1"></bio-spinner> Loading...</bio-option>
+      <bio-option [value]="null" *ngIf="(formsConfig.idMode.clearable ?? clearable) && !!(idMode$ | async)">
         Clear
       </bio-option>
       <bio-option [value]="mode.id" *ngFor="let mode of modes; trackBy: trackById" [title]="mode.name">
@@ -92,11 +84,11 @@
   </bio-form-field>
   <!-- </editor-fold> -->
   <!-- <editor-fold desc="Stage"> -->
-  <bio-form-field [loading]="state.stageLoading" *ngIf="formsConfig.idStage.show" label="Stage">
+  <bio-form-field [loading]="stageLoading" *ngIf="formsConfig.idStage.show" label="Stage">
     <bio-select controlName="idStage" placeholder="Stage" *ngLet="stages$ | async as stages">
-      <bio-option disabled *ngIf="!stages?.length && !state.stageLoading">No data found</bio-option>
-      <bio-option disabled *ngIf="state.stageLoading"><bio-spinner [size]="0.1"></bio-spinner> Loading...</bio-option>
-      <bio-option [value]="null" *ngIf="(formsConfig.idStage.clearable ?? state.clearable) && !!(idStage$ | async)">
+      <bio-option disabled *ngIf="!stages?.length && !stageLoading">No data found</bio-option>
+      <bio-option disabled *ngIf="stageLoading"><bio-spinner [size]="0.1"></bio-spinner> Loading...</bio-option>
+      <bio-option [value]="null" *ngIf="(formsConfig.idStage.clearable ?? clearable) && !!(idStage$ | async)">
         Clear
       </bio-option>
       <bio-option [value]="stage.id" *ngFor="let stage of stages; trackBy: trackById" [title]="stage.name">
@@ -111,15 +103,13 @@
   </bio-form-field>
   <!-- </editor-fold> -->
   <!-- <editor-fold desc="Character"> -->
-  <bio-form-field [loading]="state.characterLoading" *ngIf="formsConfig.idCharacterCostume.show" label="Character">
+  <bio-form-field [loading]="characterLoading" *ngIf="formsConfig.idCharacterCostume.show" label="Character">
     <bio-select controlName="idCharacterCostume" placeholder="Character" *ngLet="characters$ | async as characters">
-      <bio-option disabled *ngIf="!characters?.length && !state.characterLoading">No data found</bio-option>
-      <bio-option disabled *ngIf="state.characterLoading"
-        ><bio-spinner [size]="0.1"></bio-spinner> Loading...</bio-option
-      >
+      <bio-option disabled *ngIf="!characters?.length && !characterLoading">No data found</bio-option>
+      <bio-option disabled *ngIf="characterLoading"><bio-spinner [size]="0.1"></bio-spinner> Loading...</bio-option>
       <bio-option
         [value]="null"
-        *ngIf="(formsConfig.idCharacterCostume.clearable ?? state.clearable) && !!(idCharacterCostume$ | async)"
+        *ngIf="(formsConfig.idCharacterCostume.clearable ?? clearable) && !!(idCharacterCostume$ | async)"
       >
         Clear
       </bio-option>
