--- a/src/app/player/player-profile/player-profile.component.html
+++ b/src/app/player/player-profile/player-profile.component.html
@@ -1,128 +1,133 @@
-<ng-container *ngIf="state$ | async as state">
-  <bio-card *ngIf="player$ | async as player" class="player">
-    <div bioCardTitle>
-      <button
-        *ngIf="state.isSameAsLogged; else flagTemplate"
-        class="flag"
-        bioButton
-        icon
-        [disabled]="loadingRegion$ | async"
-        (click)="openModalSelectRegion()"
-        (mouseenter)="preloadRegions()"
-        aria-label="Change region"
+<bio-card class="player" *ngLet="isSameAsLogged$ | async as isSameAsLogged">
+  <div bioCardTitle>
+    <button
+      *ngIf="isSameAsLogged; else flagTemplate"
+      class="flag"
+      bioButton
+      icon
+      [disabled]="loadingRegion"
+      (click)="openModalSelectRegion()"
+      (mouseenter)="preloadRegions()"
+      aria-label="Change region"
+    >
+      <ng-container *ngTemplateOutlet="flagTemplate"></ng-container>
+    </button>
+    <ng-template #flagTemplate>
+      <bio-icon small [flag]="player.region?.shortName" [bioTooltip]="player.region?.name"></bio-icon>
+    </ng-template>
+    <h3>{{ player.personaName }}</h3>
+    <a
+      class="steam"
+      bioButton
+      icon
+      *ngIf="player.steamProfile"
+      [href]="player.steamProfile.profileurl"
+      bioTooltip="Steam profile"
+    >
+      <bio-icon [mdi]="mdiSteam"></bio-icon>
+    </a>
+  </div>
+  <div bioCardSubtitle>{{ player.title }}</div>
+  <div bioCardSubtitle class="about-me">{{ player.aboutMe }}</div>
+  <bio-card-content>
+    <div *ngIf="isSameAsLogged && editMode" @fadeIn>
+      <bio-form-field
+        label="Persona name"
+        [loading]="personaNameModel.isPending"
+        *ngLet="player.lastUpdatedPersonaNameDate | playerCanUpdatePersonaName as canUpdatePersonaName"
       >
-        <ng-container *ngTemplateOutlet="flagTemplate"></ng-container>
-      </button>
-      <ng-template #flagTemplate>
-        <bio-icon small [flag]="player.region?.shortName" [bioTooltip]="player.region?.name"></bio-icon>
-      </ng-template>
-      <h3>{{ player.personaName }}</h3>
-      <a
-        class="steam"
-        bioButton
-        icon
-        *ngIf="player.steamProfile"
-        [href]="player.steamProfile.profileurl"
-        bioTooltip="Steam profile"
-      >
-        <bio-icon [mdi]="mdiSteam"></bio-icon>
-      </a>
+        <input
+          bioInput
+          #personaNameModel="model"
+          [model]="player.personaName"
+          [maxLength]="100"
+          placeholder="Persona name"
+          personaNameExists
+          [personaNameExistsIgnore]="player.personaName"
+          [disabled]="!canUpdatePersonaName || saving"
+          (modelChange)="updatePersonaName($event)"
+        />
+        <bio-hint>
+          <ng-container *ngIf="canUpdatePersonaName; else cantUpdatePersonaName">
+            The persona name can be updated one time per week
+          </ng-container>
+          <ng-template #cantUpdatePersonaName>
+            Persona name will be available again in
+            {{ player.lastUpdatedPersonaNameDate | dateDifference: todayMinusSevenDate:['days', 'hours'] }}
+          </ng-template>
+        </bio-hint>
+        <bio-hint end>{{ personaNameModel.model?.length }} / 100</bio-hint>
+        <bio-errors>
+          <bio-error *error="'personaNameExists'">Player name already exists</bio-error>
+        </bio-errors>
+      </bio-form-field>
+      <bio-form-field label="Title">
+        <input
+          bioInput
+          [model]="player.title"
+          placeholder="Title"
+          [maxLength]="250"
+          (modelChange)="updatePlayer('title', $event)"
+          modelUpdateOn="blur"
+          [disabled]="saving"
+          #titleModel="model"
+        />
+        <bio-hint end>{{ titleModel.model?.length }} / 250</bio-hint>
+      </bio-form-field>
+      <bio-form-field label="About me">
+        <textarea
+          bioInput
+          resize="vertical"
+          rows="3"
+          [model]="player.aboutMe"
+          #aboutMeModel="model"
+          placeholder="About me"
+          [maxLength]="2000"
+          (modelChange)="updatePlayer('aboutMe', $event)"
+          modelUpdateOn="blur"
+          [disabled]="saving"
+        ></textarea>
+        <bio-hint end> {{ aboutMeModel.model?.length }} / 2000 </bio-hint>
+      </bio-form-field>
     </div>
-    <div bioCardSubtitle>{{ player.title }}</div>
-    <div bioCardSubtitle class="about-me">{{ player.aboutMe }}</div>
-    <bio-card-content>
-      <div *ngIf="state.isSameAsLogged && state.editMode" @fadeInOut>
-        <bio-form-field
-          label="Persona name"
-          [loading]="model.isPending"
-          *ngLet="player.lastUpdatedPersonaNameDate | playerCanUpdatePersonaName as canUpdatePersonaName"
-        >
-          <input
-            bioInput
-            #model="model"
-            [model]="player.personaName"
-            [maxLength]="100"
-            placeholder="Persona name"
-            personaNameExists
-            [personaNameExistsIgnore]="player.personaName"
-            [disabled]="!canUpdatePersonaName || state.saving"
-            (modelChange)="updatePersonaName($event)"
-          />
-          <bio-hint>
-            <ng-container *ngIf="canUpdatePersonaName; else cantUpdatePersonaName">
-              The persona name can be updated one time per week
-            </ng-container>
-            <ng-template #cantUpdatePersonaName>
-              Persona name will be available again in
-              {{ player.lastUpdatedPersonaNameDate | dateDifference: todayMinusSevenDate:['days', 'hours'] }}
-            </ng-template>
-          </bio-hint>
-          <bio-hint end>{{ model.model?.length }} / 100</bio-hint>
-          <bio-errors>
-            <bio-error *error="'personaNameExists'">Player name already exists</bio-error>
-          </bio-errors>
-        </bio-form-field>
-        <bio-form-field label="Title">
-          <input
-            bioInput
-            [model]="player.title"
-            placeholder="Title"
-            [maxLength]="250"
-            (modelChange)="update('title', $event)"
-            [disabled]="state.saving"
-            #titleModel="model"
-          />
-          <bio-hint end>{{ titleModel.model?.length }} / 250</bio-hint>
-        </bio-form-field>
-        <bio-form-field label="About me">
-          <textarea
-            bioInput
-            resize="vertical"
-            rows="3"
-            [model]="player.aboutMe"
-            #aboutMeModel="model"
-            placeholder="About me"
-            [maxLength]="2000"
-            (modelChange)="update('aboutMe', $event)"
-            [disabled]="state.saving"
-          ></textarea>
-          <bio-hint end> {{ aboutMeModel.model?.length }} / 2000 </bio-hint>
-        </bio-form-field>
-      </div>
-    </bio-card-content>
-    <bio-card-actions *ngIf="state.isSameAsLogged">
-      <button
-        *ngIf="!player.idSteamProfile"
-        bioButton
-        primary
-        type="button"
-        (click)="linkSteam(player.id)"
-        [loading]="loadingLinkSteam$ | async"
-        [disabled]="state.saving"
-      >
-        Link steam
-      </button>
+  </bio-card-content>
+  <bio-card-actions *ngIf="isSameAsLogged">
+    <button
+      *ngIf="!player.idSteamProfile"
+      bioButton
+      primary
+      type="button"
+      (click)="linkSteam(player.id)"
+      [loading]="loadingLinkSteam"
+      [disabled]="saving"
+    >
+      Link steam
+    </button>
+    <ng-container *ngIf="editMode; else notEditMode">
       <button
         bioButton
         primary
         type="button"
         (click)="save()"
-        [loading]="state.saving"
-        [disabled]="state.editMode && !state.canSave"
-        *ngIf="state.editMode"
-        @fadeInOut
+        [loading]="saving"
+        [disabled]="
+          personaNameModelRef?.isPending ||
+          personaNameModelRef?.isInvalid ||
+          (player | playerProfileInvalid: update:newPersonaName)
+        "
       >
         Save
       </button>
-      <button bioButton primary type="button" (click)="toggleEditMode()" [disabled]="state.saving">
-        {{ state.editMode ? 'Cancel' : 'Edit profile' }}
-      </button>
-    </bio-card-actions>
-  </bio-card>
-</ng-container>
+      <button bioButton primary type="button" (click)="setEditMode(false)" [disabled]="saving">Cancel</button>
+    </ng-container>
+    <ng-template #notEditMode>
+      <button bioButton primary type="button" (click)="setEditMode(true)" [disabled]="saving">Edit profile</button>
+    </ng-template>
+  </bio-card-actions>
+</bio-card>
 
 <bio-score-list-responsive
-  *ngFor="let status of scoreGroupedByStatus$ | async; trackBy: trackByScoreGroupByStatus"
+  *ngFor="let status of scoreGroupedByStatus; trackBy: trackByScoreGroupByStatus"
   [scores]="status.scores"
   [title]="status.description"
   [colDefs]="colDefs"
