--- a/src/app/shared/params/params.component.html
+++ b/src/app/shared/params/params.component.html
@@ -30,7 +30,12 @@
       <bio-option [value]="null" *ngIf="(formsConfig.idGame.clearable ?? clearable) && !!(idGame$ | async)">
         Clear
       </bio-option>
-      <bio-option [value]="game.id" *ngFor="let game of games; trackBy: trackById" [title]="game.name">
+      <bio-option
+        [value]="game.id"
+        *ngFor="let game of games; trackBy: trackById"
+        [title]="game.name"
+        (click)="gameChange.emit(game)"
+      >
         {{ game.name }}
       </bio-option>
     </bio-select>
@@ -53,6 +58,7 @@
         [value]="miniGame.id"
         *ngFor="let miniGame of miniGames$ | async; trackBy: trackById"
         [title]="miniGame.name"
+        (click)="miniGameChange.emit(miniGame)"
       >
         {{ miniGame.name }}
       </bio-option>
@@ -72,7 +78,12 @@
       <bio-option [value]="null" *ngIf="(formsConfig.idMode.clearable ?? clearable) && !!(idMode$ | async)">
         Clear
       </bio-option>
-      <bio-option [value]="mode.id" *ngFor="let mode of modes; trackBy: trackById" [title]="mode.name">
+      <bio-option
+        [value]="mode.id"
+        *ngFor="let mode of modes; trackBy: trackById"
+        [title]="mode.name"
+        (click)="modeChange.emit(mode)"
+      >
         {{ mode.name }}
       </bio-option>
     </bio-select>
@@ -91,7 +102,12 @@
       <bio-option [value]="null" *ngIf="(formsConfig.idStage.clearable ?? clearable) && !!(idStage$ | async)">
         Clear
       </bio-option>
-      <bio-option [value]="stage.id" *ngFor="let stage of stages; trackBy: trackById" [title]="stage.name">
+      <bio-option
+        [value]="stage.id"
+        *ngFor="let stage of stages; trackBy: trackById"
+        [title]="stage.name"
+        (click)="stageChange.emit(stage)"
+      >
         {{ stage.name }}
       </bio-option>
     </bio-select>
@@ -122,6 +138,7 @@
           *ngFor="let characterCostume of character.characterCostumes; trackBy: trackById"
           [value]="characterCostume.id"
           title="{{ character.name }} {{ characterCostume.name }}"
+          (click)="characterCostumeChange.emit(characterCostume)"
         >
           {{ characterCostume.name }}
         </bio-option>
