- do not order the rejected and pending scores in the player profile - show number os scores in the collapses (PlayerProfile)

--- a/src/app/player/player-profile/player-profile.component.html
+++ b/src/app/player/player-profile/player-profile.component.html
@@ -129,7 +129,7 @@
 <bio-score-list-responsive
   *ngFor="let status of scoreGroupedByStatus; trackBy: trackByScoreGroupByStatus"
   [scores]="status.scores"
-  [title]="status.description"
+  title="{{ status.description }} ({{ status.scores.length }})"
   [colDefs]="colDefs"
   [disabledProperty]="'disabled'"
   (scoreClicked)="openScoreInfo($event)"
