- added cdk virtual scroll style - added notification icon to header - implemented the notifications-component - implemented the notifications-icon - changed PlayerChangeRequestsModalComponent to accept only the score - implemented missing badge hidden class - simplified the styles of list - renamed inputs in the LoadingDirective to match the selector - added bioLoadingIgnoreMinHeight on LoadingDirective - added refreshMap operator

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,6 +14,7 @@
     </div>
     <div class="end">
       <ng-container *ngIf="isLogged$ | async; else notLogged">
+        <bio-notifications-icon></bio-notifications-icon>
         <a
           bioButton
           [icon]="isMobile"
