- Fixed select mode on submit score (closes #82)

--- a/src/app/score/score-add/score-add.component.html
+++ b/src/app/score/score-add/score-add.component.html
@@ -4,7 +4,7 @@
     <h3 bioCardTitle>Parameters</h3>
     <bio-card-content>
       <bio-params
-        [params]="form.valueChanges$ | async"
+        [params]="params$ | async"
         (paramsChange)="form.patchValue($event)"
         [config]="paramsConfig"
         setQueryParamsOnChange
