- fixed style of multiple buttons in an action container when on mobile

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -6,9 +6,10 @@
   margin-top: $margin-top;
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
 
-  button:not(:last-child) {
-    margin-right: 1rem;
+  .button {
+    margin: 0.5rem;
   }
 
   &.end {
