--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -31,6 +31,10 @@
         Check your pending changes list
       </a>
     </ng-container>
+    <a bioCardMenu routerLink="/forum">
+      <bio-icon>forum</bio-icon>
+      Forum
+    </a>
   </ng-container>
   <ng-template #noLogged>
     <a bioCardMenu routerLink="/auth/login">
