--- a/src/app/forum/forum-categories/forum-categories.component.html
+++ b/src/app/forum/forum-categories/forum-categories.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngLet="isAdmin$ | async as isAdmin">
   <div class="actions" *ngIf="isAdmin">
     <bio-checkbox [(checked)]="hideDeleted">Hide deleted</bio-checkbox>
-    <button bioButton type="button" (click)="openAddEditModal()">
+    <button bioButton type="button" (click)="openAddEditModal()" [loading]="loadingAddEditModal">
       <bio-icon>add</bio-icon>
       Add category
     </button>
@@ -16,20 +16,22 @@
   >
     <bio-accordion-item
       *ngFor="let category of categories | filterDeleted: hideDeleted; trackBy: trackById"
-      [accordionTitle]="category.name"
       cdkDrag
       expanded
     >
-      <div class="actions" *ngIf="isAdmin">
-        <button bioButton type="button" (click)="openAddEditModal(category.id)">
-          <bio-icon>edit</bio-icon>
-          Edit category
-        </button>
-        <button bioButton type="button" (click)="openAddEditSubCategory()">
-          <bio-icon>add</bio-icon>
-          Add sub category
-        </button>
+      <div bioAccordionItemTitle>
+        {{ category.name }}
+        <ng-container *ngIf="category.deletedDate">
+          - Deleted at {{ category.deletedDate | authDateFormat }}
+        </ng-container>
       </div>
+      <bio-forum-categories-category
+        [category]="category"
+        [isAdmin]="isAdmin"
+        [loadingAddEditModal]="loadingAddEditModal"
+        (openAddEditModal)="openAddEditModal($event)"
+        (categoryChange)="onCategoryChange($event)"
+      ></bio-forum-categories-category>
     </bio-accordion-item>
   </bio-accordion>
 </ng-container>
